<resources>
    <string name="app_name">Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_name">Egor Petrov</string>
    <string name="settings_default_status">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_phone">+7911111111</string>
    <string name="setting_label_phone_number">нажмите,чтобы изменить номер телефона</string>
    <string name="Settings_default_login">Egor Petrov</string>
    <string name="Settings_label_login">Имя пользователя</string>
    <string name="Settings_default_bio">О себе</string>
    <string name="Settings_label_bio">Напишите немного о себе</string>
    <string name="settings_btn_action_menu_change_name">Изменить имя</string>
    <string name="settings_btn_action_menu_exit">Выход</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отпрвавили ваш SMS с кодом проверки на ваш телеофон</string>
    <string name="register_hint_default_code">Введите код</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">Введите номер телефона</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_epmty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">Имя пользователя</string>
    <string name="settings_user_already_exists">Такой пользователь уже существует</string>
    <string name="settings_input_bio">Информация о пользователе</string>
</resources>