<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.telega.telega.UI.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:src="@drawable/defult_user"
            app:civ_border_color="#FF000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/setting_fullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_default_name"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_user_photo"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:textSize="@dimen/normalText"/>

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_default_status"
            android:textColor="@color/colorAccentDark"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting_fullName"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:textSize="@dimen/horizontal_margin"
            tools:ignore="SpUsage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/settings_text_account"
        android:text="@string/settings_text_account"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/setting_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/vertical_large_margin"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/SettingsButtons">

        <TextView
            android:id="@+id/settings_phone_number"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_default_phone"
            style="@style/NormalText" />
        <TextView
            android:id="@+id/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/setting_label_phone_number"
            style="@style/SmallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_userName"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/SettingsButtons">

        <TextView
            android:id="@+id/settings_userName"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_userName"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Settings_default_login"
            style="@style/NormalText"/>
        <TextView
            android:id="@+id/settings_label_userName"
            app:layout_constraintTop_toBottomOf="@id/settings_userName"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Settings_label_login"
            style="@style/SmallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_userName"
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/SettingsButtons">

        <TextView
            android:id="@+id/settings_bio"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Settings_default_bio"
            style="@style/NormalText" />
        <TextView
            android:id="@+id/settings_label_bio"
            app:layout_constraintTop_toBottomOf="@id/settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/Settings_label_bio"
            style="@style/SmallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_bio"
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_btn_change_photo_height"
        android:src="@drawable/ic_camera"
        app:civ_border_color="@color/colorGrey"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@+id/setting_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_text_account" />
</androidx.constraintlayout.widget.ConstraintLayout>